@@ -1,7 +1,7 @@
 /*
  * This file is a part of BSL Language Server.
  *
- * Copyright (c) 2018-2022
+ * Copyright (c) 2018-2025
  * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Fedkin <nixel2007@gmail.com> and contributors
  *
  * SPDX-License-Identifier: LGPL-3.0-or-later
@@ -29,10 +29,10 @@ import com.github._1c_syntax.bsl.languageserver.utils.DiagnosticHelper;
 import com.github._1c_syntax.bsl.languageserver.utils.Ranges;
 import com.github._1c_syntax.bsl.languageserver.utils.RelatedInformation;
 import com.github._1c_syntax.bsl.parser.BSLParser;
+import jakarta.annotation.PostConstruct;
 import org.antlr.v4.runtime.tree.ParseTree;
 import org.eclipse.lsp4j.DiagnosticRelatedInformation;
 
-import javax.annotation.PostConstruct;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
@@ -85,22 +85,20 @@ public class IfElseDuplicatedConditionDiagnostic extends AbstractVisitorDiagnost
   }
 
   private void checkExpression(List<BSLParser.ExpressionContext> expressionContexts, int i) {
-    BSLParser.ExpressionContext currentExpression = expressionContexts.get(i);
+    var currentExpression = expressionContexts.get(i);
 
-    List<BSLParser.ExpressionContext> identicalExpressions = expressionContexts.stream()
+    var identicalExpressions = expressionContexts.stream()
       .skip(i)
       .filter(expressionContext ->
         !expressionContext.equals(currentExpression)
           && DiagnosticHelper.equalNodes(currentExpression, expressionContext))
-      .collect(Collectors.toList());
+      .toList();
 
     if (identicalExpressions.isEmpty()) {
       return;
     }
 
-    identicalExpressions.stream()
-      .collect(Collectors.toCollection(() -> checkedConditions));
-
+    identicalExpressions.stream().collect(Collectors.toCollection(() -> checkedConditions));
     List<DiagnosticRelatedInformation> relatedInformation = new ArrayList<>();
 
     relatedInformation.add(RelatedInformation.create(
@@ -121,6 +119,4 @@ public class IfElseDuplicatedConditionDiagnostic extends AbstractVisitorDiagnost
 
     diagnosticStorage.addDiagnostic(currentExpression, relatedInformation);
   }
-
 }
-
