@@ -1,7 +1,7 @@
 /*
  * This file is a part of BSL Language Server.
  *
- * Copyright (c) 2018-2022
+ * Copyright (c) 2018-2025
  * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Fedkin <nixel2007@gmail.com> and contributors
  *
  * SPDX-License-Identifier: LGPL-3.0-or-later
@@ -20,10 +20,12 @@
  * License along with BSL Language Server.
  */
 package com.github._1c_syntax.bsl.languageserver.utils.expressiontree;
+
+import com.github._1c_syntax.bsl.languageserver.utils.Trees;
 import com.github._1c_syntax.bsl.parser.BSLLexer;
 import com.github._1c_syntax.bsl.parser.BSLParser;
 import com.github._1c_syntax.bsl.parser.BSLParserBaseVisitor;
-import lombok.Value;
+import org.antlr.v4.runtime.tree.ErrorNode;
 import org.antlr.v4.runtime.tree.ParseTree;
 import org.antlr.v4.runtime.tree.TerminalNode;
 
@@ -31,19 +33,18 @@ import java.util.ArrayDeque;
 import java.util.Collections;
 import java.util.Deque;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 
 /**
- * внутренний, неэкспортируемый класс.
+ * Посетитель AST, который находит выражения и преобразует их в Expression Tree
  */
-class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
+public final class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
 
-  @Value
-  private static class OperatorInCode {
-    BslOperator operator;
-    ParseTree actualSourceCode; // ИЛИ vs OR в диагностических сообщениях, как написано в коде
-
+  /**
+   * @param actualSourceCode ИЛИ vs OR в диагностических сообщениях, как написано в коде
+   */
+  private record OperatorInCode(BslOperator operator, ParseTree actualSourceCode) {
     public int getPriority() {
       return operator.getPriority();
     }
@@ -54,6 +55,18 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
 
   private BslExpression resultExpression;
   private int recursionLevel = -1;
+
+  /**
+   * Хелпер построения дерева выражения на основе готового AST выражения
+   *
+   * @param ctx AST выражения
+   * @return дерево вычисления выражения
+   */
+  public static BslExpression buildExpressionTree(BSLParser.ExpressionContext ctx) {
+    var instance = new ExpressionTreeBuildingVisitor();
+    instance.visitExpression(ctx);
+    return instance.getExpressionTree();
+  }
 
   /**
    * @return результирующее выражение в виде дерева вычисления операций
@@ -71,6 +84,16 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
 
     var nestingCount = operatorsInFly.size();
     recursionLevel++;
+
+    if (Trees.nodeContainsErrors(ctx) || (ctx.getChildCount() == 0 || ctx.children.stream().anyMatch(ErrorNode.class::isInstance))) {
+      var errorExpressionNode = new ErrorExpressionNode(ctx);
+      if (recursionLevel > 0) {
+        operands.push(errorExpressionNode);
+      } else {
+        resultExpression = errorExpressionNode;
+      }
+      return ctx;
+    }
 
     visitMember(ctx.member(0));
     var count = ctx.getChildCount();
@@ -97,7 +120,12 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
     }
 
     var operation = operands.peek();
-    assert operation != null; // для спокойствия сонара
+
+    // В случае ошибок парсинга выражения, operation может быть null
+    if (operation == null) {
+      recursionLevel--;
+      return ctx;
+    }
 
     if (operation.getRepresentingAst() == null) {
       operation.setRepresentingAst(ctx);
@@ -114,56 +142,70 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
   @Override
   public ParseTree visitMember(BSLParser.MemberContext ctx) {
 
+    // В случае ошибки парсинга member может быть пустой.
+    if (Trees.nodeContainsErrors(ctx) || ctx.getChildCount() == 0 || ctx.children.stream().anyMatch(ErrorNode.class::isInstance)) {
+      operands.push(new ErrorExpressionNode(ctx));
+      return ctx;
+    }
+
     // нужен ручной dispatch на конкретного child,
     // т.к. нет отдельного правила для подвыражения в скобках
     //  constValue
-    //    | complexIdentifier
-    //    | (( LPAREN expression RPAREN ) modifier*) // нечего оверрайдить !
-    //    | (WAIT_KEYWORD (IDENTIFIER | globalMethodCall))
+      // | complexIdentifier
+      // | (( LPAREN expression RPAREN ) modifier*) // нечего оверрайдить !
+      // | (IDENTIFIER | globalMethodCall)          // нечего оверрайдить !
+      // | waitExpression
 
     var unaryModifier = ctx.unaryModifier();
     var childIndex = 0;
+
     if (unaryModifier != null) {
       visitUnaryModifier(unaryModifier);
-      childIndex = 1;
+      childIndex = ctx.children.indexOf(unaryModifier) + 1;
+    }
+
+    if (ctx.waitExpression() != null) {
+      return visitWaitExpression(ctx.waitExpression());
     }
 
     var dispatchChild = ctx.getChild(childIndex);
-    if (dispatchChild instanceof TerminalNode) {
-      var token = ((TerminalNode) dispatchChild).getSymbol().getType();
+    if (dispatchChild instanceof ErrorNode) {
+      operands.push(new ErrorExpressionNode(dispatchChild));
+    } else if (dispatchChild instanceof TerminalNode terminalNode) {
+      var token = terminalNode.getSymbol().getType();
 
       // ручная диспетчеризация
       switch (token) {
-        case BSLLexer.LPAREN:
-          visitParenthesis(ctx.expression(), ctx.modifier());
-          break;
-        case BSLLexer.AWAIT_KEYWORD:
-          visitAwaitedMember(ctx.getChild(childIndex + 1));
-          break;
-        default:
-          throw new IllegalStateException("Unexpected rule " + dispatchChild);
+        case BSLLexer.LPAREN -> visitParenthesis(ctx.expression(), ctx.modifier());
+        default -> operands.push(new ErrorExpressionNode(dispatchChild));
       }
-
     } else {
       dispatchChild.accept(this);
-    }
-
-    if (unaryModifier != null) {
-      buildOperation();
     }
 
     return ctx;
   }
 
-  private void visitParenthesis(BSLParser.ExpressionContext expression, List<? extends BSLParser.ModifierContext> modifiers) {
+  private void visitParenthesis(BSLParser.ExpressionContext expression,
+                                List<? extends BSLParser.ModifierContext> modifiers) {
+
+    // Handle the case where expression is empty (empty parentheses)
+    if (expression == null || expression.getTokens().isEmpty()) {
+      operands.push(new ErrorExpressionNode(expression));
+      return;
+    }
 
     var subExpr = makeSubexpression(expression);
+
+    if (subExpr == null) {
+      subExpr = new ErrorExpressionNode(expression);
+    }
+
     operands.push(subExpr);
 
     for (var modifier : modifiers) {
       modifier.accept(this);
     }
-
   }
 
   private void visitAwaitedMember(ParseTree child) {
@@ -173,11 +215,8 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
 
   @Override
   public ParseTree visitOperation(BSLParser.OperationContext ctx) {
-
-    BslOperator operator = getOperator(ctx);
-
+    var operator = getOperator(ctx);
     processOperation(new OperatorInCode(operator, ctx));
-
     return ctx;
   }
 
@@ -187,12 +226,20 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
       return;
     }
 
-    var lastSeenOperator = operatorsInFly.peek();
-    if (lastSeenOperator.getPriority() > operator.getPriority()) {
+    while (hasHigherPriorityOperatorsInFly(operator)) {
       buildOperation();
     }
 
     operatorsInFly.push(operator);
+  }
+
+  private boolean hasHigherPriorityOperatorsInFly(OperatorInCode operator) {
+    var lastSeenOperator = operatorsInFly.peek();
+    if (lastSeenOperator == null) {
+      return false;
+    }
+
+    return lastSeenOperator.getPriority() > operator.getPriority();
   }
 
   private static BslOperator getOperator(BSLParser.OperationContext ctx) {
@@ -236,7 +283,6 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
 
   @Override
   public ParseTree visitConstValue(BSLParser.ConstValueContext ctx) {
-
     var node = TerminalSymbolNode.literal(ctx);
     operands.push(node);
     return ctx;
@@ -247,21 +293,12 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
     var child = (TerminalNode) ctx.getChild(0);
     var token = (child).getSymbol().getType();
 
-    BslOperator operator;
-
-    switch (token) {
-      case BSLLexer.PLUS:
-        operator = BslOperator.UNARY_PLUS;
-        break;
-      case BSLLexer.MINUS:
-        operator = BslOperator.UNARY_MINUS;
-        break;
-      case BSLLexer.NOT_KEYWORD:
-        operator = BslOperator.NOT;
-        break;
-      default:
-        throw new IllegalArgumentException();
-    }
+    var operator = switch (token) {
+      case BSLLexer.PLUS -> BslOperator.UNARY_PLUS;
+      case BSLLexer.MINUS -> BslOperator.UNARY_MINUS;
+      case BSLLexer.NOT_KEYWORD -> BslOperator.NOT;
+      default -> throw new IllegalArgumentException();
+    };
 
     operatorsInFly.push(new OperatorInCode(operator, child));
 
@@ -287,7 +324,6 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
 
   @Override
   public ParseTree visitGlobalMethodCall(BSLParser.GlobalMethodCallContext ctx) {
-
     var name = ctx.methodName().IDENTIFIER();
     var callNode = MethodCallNode.create(name);
     callNode.setRepresentingAst(ctx);
@@ -301,6 +337,11 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
 
   @Override
   public ParseTree visitNewExpression(BSLParser.NewExpressionContext ctx) {
+    if (Trees.nodeContainsErrors(ctx)) {
+      operands.push(new ErrorExpressionNode(ctx));
+      return ctx;
+    }
+
     var typeName = ctx.typeName();
 
     List<? extends BSLParser.CallParamContext> args;
@@ -314,7 +355,11 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
     if (typeName == null) {
       // function style
       var typeNameArg = args.get(0);
-      args = args.stream().skip(1).collect(Collectors.toList());
+      if (typeNameArg.expression() == null) {
+        operands.push(new ErrorExpressionNode(ctx));
+        return ctx;
+      }
+      args = args.stream().skip(1).toList();
       callNode = ConstructorCallNode.createDynamic(makeSubexpression(typeNameArg.expression()));
     } else {
       // static style
@@ -323,9 +368,7 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
     }
 
     callNode.setRepresentingAst(ctx);
-
     addCallArguments(callNode, args);
-
     operands.push(callNode);
     return ctx;
   }
@@ -345,9 +388,7 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
   @Override
   public ParseTree visitAccessIndex(BSLParser.AccessIndexContext ctx) {
     var target = operands.pop();
-
     var expressionArg = makeSubexpression(ctx.expression());
-
     var indexOperation = BinaryOperationNode.create(BslOperator.INDEX_ACCESS, target, expressionArg, ctx);
     operands.push(indexOperation);
     return ctx;
@@ -366,7 +407,6 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
 
   @Override
   public ParseTree visitTernaryOperator(BSLParser.TernaryOperatorContext ctx) {
-
     var ternary = TernaryOperatorNode.create(
       makeSubexpression(ctx.expression(0)),
       makeSubexpression(ctx.expression(1)),
@@ -380,11 +420,11 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
   }
 
   private static BslExpression makeSubexpression(BSLParser.ExpressionContext ctx) {
-    return ExpressionParseTreeRewriter.buildExpressionTree(ctx);
+    return buildExpressionTree(ctx);
   }
 
   private static void addCallArguments(AbstractCallNode callNode, List<? extends BSLParser.CallParamContext> args) {
-    for (BSLParser.CallParamContext parameter : args) {
+    for (var parameter : args) {
       if (parameter.expression() == null) {
         callNode.addArgument(new SkippedCallArgumentNode());
       } else {
@@ -399,19 +439,23 @@ class ExpressionTreeBuildingVisitor extends BSLParserBaseVisitor<ParseTree> {
     }
 
     var operator = operatorsInFly.pop();
-    switch (operator.getOperator()) {
-      case UNARY_MINUS:
-      case UNARY_PLUS:
-      case NOT:
-        var operand = operands.pop();
-        var operation = UnaryOperationNode.create(operator.getOperator(), operand, operator.getActualSourceCode());
-        operands.push(operation);
-        break;
-      default:
-        var right = operands.pop();
-        var left = operands.pop();
-        var binaryOp = BinaryOperationNode.create(operator.getOperator(), left, right, operator.getActualSourceCode());
-        operands.push(binaryOp);
+    if (Objects.requireNonNull(operator.operator()) == BslOperator.UNARY_MINUS
+      || operator.operator() == BslOperator.NOT
+      || operator.operator() == BslOperator.UNARY_PLUS) {
+
+      var operand = operands.pop();
+      var operation = UnaryOperationNode.create(operator.operator(), operand, operator.actualSourceCode());
+      operand.setParent(operation);
+      operands.push(operation);
+    } else {
+      var right = operands.pop();
+      var left = operands.pop();
+      var binaryOp = BinaryOperationNode.create(operator.operator(), left, right, operator.actualSourceCode());
+
+      left.setParent(binaryOp);
+      right.setParent(binaryOp);
+
+      operands.push(binaryOp);
     }
   }
 }
